--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Carpinteria Ahmed",
+  "name": "Carpinteria Ahmed",
   "icons": [
     {
       "src": "favicon.ico",
@@ -11,6 +11,11 @@
       "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "logo121.png",
+      "type": "image/png",
+      "sizes": "121x121"
     },
     {
       "src": "logo512.png",
